# tg-news-digest-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.example.yaml  docker-compose.example.yml
src/tg_news_digest/: __init__.py  __main__.py  digest.py  feeds.py  telegram.py
tests/: test_smoke.py
